# yummy-cereal

./: .bumpversion.cfg  .gitignore  .test_report.html  Gruntfile.js  README.md  commands.py  exec.yml  parsers.js  setup.cfg  setup.py  template.yml  test_report.html  todo.md
.github/workflows/: pull_request.yml
docs/: conf.py  examples.md  global.rst  index.rst  yummy_cereal.rst
docs/api/: modules.rst  yummy_cereal.exceptions.rst  yummy_cereal.factories.rst  yummy_cereal.rst  yummy_cereal.utils.rst
docs/static/: README.html
scripts/: clean.bash  jobs.yml  template.yml
tests/: conftest.py  spec.yml
tests/behaviour_tests/: __init__.py  annotations_parser.feature  annotations_parsing.feature  annotations_serializing.feature  parsers.feature  test_annotations_parser.py  test_annotations_parsing.py  test_annotations_serializing.py  test_parsers.py  test_validated_parser.py  validated_parser.feature  validation_checks.feature
tests/fixtures/: menu.py  menu.yml  menu_classes.py  parsers.py  people.py  sample_menus.py  serializers.py
tests/unit_tests/: __init__.py  test_annotated_fields.py  test_annotations_parser.py  test_factories.py  test_generic_fields.py  test_parser_decorators.py  test_parser_factories.py  test_validated_parser.py
yummy_cereal/: __init__.py  annotated_fields.py  annotations_parser.py  example.py  exceptions.py  factories.py  generic_fields.py  parse.py  parser_decorators.py  parser_factories.py  protocols.py  temp.py  utils.py  validate.py  validated_parser.py  yummy_cereal.pyi
yummy_cereal/parsers/: __init__.py  annotations_parser.py  (+3 more)
(+27 files in other folders)
