[metadata]
name = yummy_cereal
version = 0.3.0
description = yummy_cereal
url = https://github.com/JoelLefkowitz/yummy-cereal
keywords = parser
license_file = LICENSE.md
long-description = file: README.md
author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools

[pydocstyle]
inherit = false
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
ignore = D200, D203, D213, D406, D407

[flake8]
doctests = True
max-line-length = 88
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[isort]
line_length = 88
force_single_line = True
known_first_party = pytest_cov
